--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 
    <div class="wrap">
       <div class="title">
-         <h1 class="rahul">Son Tung</h1>
-         <img src="assets/img/1.png" alt="ring-icon" class="gif">
+         <h1 class="rahul">Sơn Tùng</h1>
+         <img src="assets/img/Picture1.png" alt="ring-icon" class="gif">
          <h1 class="pranjal">Thu Trang</h1>
          <div class="home_txt">
-            <h3>LỄ VU QUY (喜)</h3>
+            <h3>LỄ THÀNH HÔN </h3>
             <p>
-               on <span class="date line">19 November 2023</span></29>, At <span class="place line">Kim Quan</span>
-               Yên Viên,
+               Vào <span class="date line">19/11/2023</span></29>, Tại <span class="place line">Thôn Kim Quan</span>
+               xã Yên Viên,
                Gia Lâm, Hà Nội
             </p>
          </div>
